# server-rust

./: .gitpod.yml  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build-napi.yml.wip  check-test-code.yml  napi-build.yml  package-test.yml  rest-api-build.yml  rust-build.yml  rust-build.yml.disabled  rust-check.yml  rust-fmt.yml
api-utils/: Cargo.toml
api-utils/src/: executor.rs  lib.rs
benches/: engine_keyword.rs
crypto/: Cargo.toml
crypto/src/: aes_128.rs  base64.rs  eapi.rs  error.rs  lib.rs  linux.rs  weapi.rs
engine/: Cargo.toml
engine-base/: Cargo.toml
engine-base/src/: executor.rs  interface.rs
engine-demo/: Cargo.toml
engine-demo/src/: main.rs
engines/: README.md
engines/bilibili/: Cargo.toml
engines/bilibili/src/: api.rs  lib.rs
engines/bilibili/src/api/: typing.rs
engines/joox/: Cargo.toml
engines/joox/src/: lib.rs
engines/kugou/: Cargo.toml
engines/kuwo/: Cargo.toml  KuwoMusicApi.CHANGES
engines/migu/: Cargo.toml
engines/pyncm/: Cargo.toml
engines/qq/: Cargo.toml
engines/ytdl/: Cargo.toml
examples/: keyword.rs
napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
napi/npm/android-arm-eabi/: package.json
napi/npm/android-arm64/: package.json
napi/npm/darwin-arm64/: package.json
napi/npm/darwin-x64/: package.json
napi/npm/freebsd-x64/: package.json
napi/npm/linux-arm-gnueabihf/: package.json
napi/npm/linux-arm64-gnu/: package.json
napi/npm/linux-arm64-musl/: package.json
napi/npm/linux-x64-gnu/: package.json
napi/npm/linux-x64-musl/: package.json
napi/npm/win32-arm64-msvc/: package.json
napi/npm/win32-ia32-msvc/: package.json
napi/npm/win32-x64-msvc/: package.json
napi/src/: engines.rs  executor.rs  lib.rs  types.rs
request/: Cargo.toml
request/src/: ext.rs  json.rs  lib.rs
rest-api/: Cargo.toml  README.md  config.toml
rest-api/docs/: api.md  configure.md
rest-api/src/: config_reader.rs  controllers.rs  executor.rs  main.rs  retrieve.rs  schema.rs
rest-api/src/controllers/: retrieve.rs  search.rs
rest-api/src/executor/: context.rs  engine.rs  retrieve.rs  search.rs
rest-api/src/schema/v1/: search.json
scripts/: check.sh
selector/: Cargo.toml
selector/src/: lib.rs
src/: cli.rs  crypto.rs  engine.rs  error.rs  hook.rs  lib.rs  logger.rs  main.rs  providers.rs  request.rs  server.rs
src/cli/: checker.rs  opt.rs
src/crypto/: base64.rs  common.rs  eapi.rs  kuwo_des.rs  linux.rs  uri.rs
src/hook/: consts.rs  request.rs  target.rs
src/providers/: bilibili.rs  definitions.rs  identifiers.rs  kugou.rs  kuwo.rs
src/request/: error.rs  header.rs  proxy.rs  proxy_manager.rs
src/server/: connect_handler.rs  controllers.rs  error.rs  utils.rs  (+2 more)
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: request_test.rs
types/: Cargo.toml
types/src/: config.rs  lib.rs
unm_cli/: Cargo.toml
unm_cli/src/: cli.rs  logger.rs  main.rs
unm_cli/src/cli/: checker.rs  opt.rs
unm_cli/src/cli/checker/: checkers.rs
unm_common/: Cargo.toml
unm_common/src/: json_error.rs  lib.rs  string_error.rs
unm_core/: Cargo.toml
unm_core/src/: lib.rs  request.rs  server.rs
unm_core/src/request/: error.rs  header.rs  proxy_manager.rs
unm_core/src/server/: connect_handler.rs  controllers.rs  error.rs  hook.rs  middleware.rs  route.rs  utils.rs
unm_core/src/server/hook/: request.rs
unm_core/tests/: request_test.rs
unm_crypto/: Cargo.toml
unm_crypto/src/: base64.rs  common.rs  eapi.rs  error.rs  lib.rs  linux.rs  md5.rs  uri.rs
unm_engine/: Cargo.toml
unm_engine/examples/: search_retrieve_test.rs
unm_engine/src/: executor.rs  interface.rs  lib.rs
unm_engine_bilibili/: Cargo.toml
unm_engine_demo/: Cargo.toml
unm_engine_demo/src/: main.rs
unm_engine_joox/: Cargo.toml
unm_engine_joox/src/: lib.rs
unm_engine_kugou/: Cargo.toml
unm_engine_migu/: Cargo.toml
unm_engine_migu/src/: lib.rs  types.rs
unm_engine_pyncm/: Cargo.toml
unm_engine_pyncm/src/: lib.rs
unm_engine_ytdl/: Cargo.toml
unm_engine_ytdl/src/: lib.rs
unm_macro/: Cargo.toml
unm_napi/: .gitignore  Cargo.toml  package.json
unm_providers/: Cargo.toml
unm_providers/src/: error.rs  lib.rs  providers.rs
unm_providers/src/providers/: bilibili.rs  definitions.rs
unm_proxy_server/: Cargo.toml
unm_proxy_server/src/: connect_handler.rs  controllers.rs  error.rs  lib.rs  middleware.rs  route.rs  utils.rs
unm_proxy_server/src/hook/: request.rs
unm_proxy_server/src/hook/request/: before_request_hook.rs  netease_hook.rs  pretend_play.rs
unm_proxy_server/src/hook/request/before_request_hook/: netease_hook.rs  pretend_play.rs
unm_request/: Cargo.toml
unm_request/src/: ext.rs  header.rs  json.rs  lib.rs
unm_request/tests/: request_test.rs
unm_resolver/: Cargo.toml
unm_resolver/benches/: engine_keyword.rs
unm_resolver/examples/: bilibili_test.rs  kugou_test.rs  migu_test.rs  resolve_test.rs  search_retrieve_test.rs  ytdlp_test.rs
unm_resolver/src/: crypto.rs  engine.rs  lib.rs  resolve.rs  utils.rs
unm_resolver/src/crypto/: kuwo_des.rs
unm_resolver/src/engine/: bilibili.rs  kugou.rs  migu.rs  pyncm.rs  ytdl.rs  ytdlp.rs
unm_resolver/src/request/: ext.rs
unm_resolver_napi/: .gitignore  Cargo.toml  package.json
unm_resolver_napi/npm/android-arm64/: README.md  package.json
unm_resolver_napi/npm/darwin-arm64/: README.md  package.json
unm_resolver_napi/npm/darwin-x64/: README.md  package.json
unm_resolver_napi/npm/linux-arm64-gnu/: README.md  package.json
unm_resolver_napi/npm/linux-x64-gnu/: README.md  package.json
unm_resolver_napi/npm/linux-x64-musl/: README.md  package.json
unm_resolver_napi/npm/win32-arm64-msvc/: README.md  package.json
unm_resolver_napi/npm/win32-x64-msvc/: README.md  package.json
unm_resolver_napi/src/: engines.rs  executor.rs  lib.rs  types.rs
unm_resolver_napi/tests/: integration_test.js
unm_selector/: Cargo.toml
unm_selector/src/: lib.rs
unm_test_utils/: Cargo.toml
unm_types/: Cargo.toml
unm_utils/: Cargo.toml
unm_utils/src/: iter.rs  lib.rs  option.rs  val_inside.rs
(+39 files in other folders)
