[workspace]
members = [
    # "unm_resolver",
    # "unm_resolver_napi",

    "unm_test_utils",
    "unm_types",
    "unm_crypto",
    "unm_engine",
    "unm_request",
    "unm_selector",

    # Engines
    "unm_engine_bilibili",
    "unm_engine_ytdl",
    "unm_engine_pyncm",
    "unm_engine_kugou",
    "unm_engine_migu",

    # Demo
    "unm_engine_demo",
]

[profile.release]
lto = true
