[workspace]
members = [
    "unm_test_utils",
    "unm_types",
    "unm_crypto",
    "unm_engine",
    "unm_request",
    "unm_selector",

    # Engines
    "unm_engine_bilibili",
    "unm_engine_ytdl",
    "unm_engine_pyncm",
    "unm_engine_kugou",
    "unm_engine_migu",
    "unm_engine_joox",

    # Demo
    "unm_engine_demo",

    # N-API
    "unm_napi",
]

[profile.release]
lto = "thin"
