[workspace]
members = [
    # Core
    "engine-base",
    "types",

    # Utilities
    "crypto",
    "selector",
    "request",
    "test-utils",

    # Engines
    "engines/*",

    # Demo
    "engine-demo",

    # N-API
    "napi",

    # REST API
    "rest-api",
]

[profile.release]
lto = "thin"
