[package]
name = "unm_crypto"
description = "The crypto toolkit for UnblockNeteaseMusic."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
license = "LGPL-3.0-only"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
concat-string = "1.0.1"
faster-hex = "0.6.1"
log = "0.4.17"
md5 = "0.7.0"
once_cell = "1.16.0"
openssl = { version = "0.10.42", features = ["vendored"] }

regex = "1.7.0"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
smallvec = { version = "1.10.0", features = ["union", "const_generics", "const_new"] }

thiserror = "1.0.37"
url = "2.3.1"

[features]

