[package]
name = "unm_crypto"
description = "The crypto toolkit for UnblockNeteaseMusic."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
license = "LGPL-3.0-only"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
concat-string = "1.0.1"
faster-hex = "0.8.0"
log = "0.4.19"
md5 = "0.7.0"
once_cell = "1.18.0"
openssl = { version = "0.10.55", features = ["vendored"] }

regex = "1.9.1"

serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
smallvec = { version = "1.11.0", features = ["union", "const_generics", "const_new"] }

thiserror = "1.0.44"
url = "2.4.0"

[features]

