[package]
name = "unm_engine"
description = "The engine base for UnblockNeteaseMusic, including the executor and the Engine trait."
license = "LGPL-3.0-or-later"
version = "0.2.0-pre.4"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
futures = "0.3.21"
log = "0.4.16"
thiserror = "1.0.30"
unm_types = { version = "0.2.0-pre.1", path = "../types" }
