[package]
name = "unm_engine_demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unm_test_utils = { version = "0.1.0", path = "../test-utils" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
unm_types = { version = "0.1.0", path = "../types" }
unm_engine = { version = "0.1.0", path = "../engine-base" }

# Engines
unm_engine_bilibili = { version = "0.1.0", path = "../engines/bilibili" }
unm_engine_ytdl = { version = "0.1.0", path = "../engines/ytdl" }
unm_engine_kugou = { version = "0.1.0", path = "../engines/kugou" }
unm_engine_migu = { version = "0.1.0", path = "../engines/migu" }
mimalloc = "0.1.28"
