[package]
name = "unm_engine_demo"
description = "Demonstrate how engines work in UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unm_test_utils = { version = "0.1.0", path = "../test-utils" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
unm_types = { version = "0.2.0-pre.1", path = "../types" }
unm_engine = { version = "0.2.0-pre.1", path = "../engine-base" }

# Engines
unm_engine_bilibili = { version = "0.2.0-pre.1", path = "../engines/bilibili" }
unm_engine_ytdl = { version = "0.2.0-pre.1", path = "../engines/ytdl" }
unm_engine_kugou = { version = "0.2.0-pre.1", path = "../engines/kugou" }
unm_engine_migu = { version = "0.2.0-pre.1", path = "../engines/migu" }
unm_engine_kuwo = { version = "0.2.0-pre.1", path = "../engines/kuwo" }
mimalloc = "0.1.28"
concat-idents = "1.1.3"
