[package]
edition = "2021"
name = "unm_napi"
description = "The N-API for UnblockNeteaseMusic (Rust)."
license = "LGPL-3.0-or-later"
version = "0.1.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-recursion = "1.0.0"
napi = { version = "2.2.0", features = ["full"] }
napi-derive = "2.2.0"
unm_engine = { version = "0.2.0-pre.1", path = "../engine-base" }
unm_types = { version = "0.2.0-pre.1", path = "../types" }
concat-idents = "1.1.3"
simple_logger = "2.1.0"
mimalloc = "0.1.28"

# Engines
unm_engine_bilibili = { version = "0.2.0-pre.1", path = "../engines/bilibili" }
unm_engine_kugou = { version = "0.2.0-pre.1", path = "../engines/kugou" }
unm_engine_migu = { version = "0.2.0-pre.1", path = "../engines/migu" }
unm_engine_pyncm = { version = "0.2.0-pre.1", path = "../engines/pyncm" }
unm_engine_ytdl = { version = "0.2.0-pre.1", path = "../engines/ytdl" }
unm_engine_kuwo = { version = "0.2.0-pre.1", path = "../engines/kuwo" }

[build-dependencies]
napi-build = "1.2.1"
