[package]
edition = "2021"
name = "unm_napi"
description = "The N-API for UnblockNeteaseMusic (Rust)."
license = "LGPL-3.0-or-later"
version = "0.0.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.3.1", features = ["full"] }
napi-derive = "2.3.0"
unm_engine = { version = "0.3.0-pre.0", path = "../engine-base" }
unm_types = { version = "0.3.0-pre.0", path = "../types" }
simple_logger = "2.1.0"
mimalloc = "0.1.28"
unm_api_utils = { version = "0.1.0", path = "../api-utils" }

[build-dependencies]
napi-build = "1.2.1"
