[package]
name = "unm_request"
description = "The request-related methods for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.3.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
cached = "0.40.0"
http = "0.2.8"
reqwest = { version = "0.11.13", features = [
    "json",
    "brotli",
    "deflate",
    "gzip",
    "native-tls-vendored",
    "socks",
] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
url = "2.3.1"

[dev-dependencies]
once_cell = "1.16.0"
