[package]
name = "unm_rest_api"
description = "The RESTful API that can deal with UnblockNeteaseMusic API."
version = "0.3.0"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
bytes = "1.2.1"
futures = "0.3.25"
http = "0.2.8"
mimalloc = "0.1.32"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["native-tls-vendored", "gzip", "deflate", "brotli", "stream"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tower = { version = "0.4.13", features = ["buffer", "limit", "load-shed"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
unm_api_utils = { version = "0.3.0", path = "../api-utils" }
unm_engine = { version = "0.3.0", path = "../engine-base" }
unm_engine_bilibili = { version = "0.3.0", path = "../engines/bilibili" }
unm_types = { version = "0.3.0", path = "../types" }
url = "2.3.1"
