[package]
name = "unm_test_utils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
log = "0.4.16"
simple_logger = "2.1.0"
unm_engine = { version = "0.2.0-pre.1", path = "../engine-base" }
unm_types = { version = "0.2.0-pre.1", path = "../types" }
