[package]
name = "unm_test_utils"
description = "The test utilities for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.19"
simple_logger = "4.2.0"
unm_engine = { version = "0.4.0", path = "../engine-base" }
unm_types = { version = "0.4.0", path = "../types" }
