[package]
name = "unm_types"
version = "0.2.0-pre.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.1"
reqwest = { version = "0.11.10", features = ["native-tls-vendored"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
typed-builder = "0.10.0"
