[package]
name = "unm_common"
description = "The common codebase of UNM."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error - Core
thiserror = "1"

# Error - Serde related
serde_json = "1"

# Error - HTTP related
http = "0.2"
