[package]
name = "unm_crypto"
description = "The crypto toolkit for UnblockNeteaseMusic."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

thiserror = "1"

serde = "1"
serde_json = "1"

regex = "1"
hex = "0.4"
md5 = "0.7"
url = "2"

[build-dependencies]
openssl-sys = { version = "^0.9", features = ["vendored"] }
