[package]
name = "unm_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
futures = "0.3.21"
log = "0.4.16"
thiserror = "1.0.30"
unm_types = { version = "0.1.0", path = "../unm_types" }
