[package]
name = "unm_engine_joox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
base64 = "0.13.0"
http = "0.2.6"
log = "0.4.16"
once_cell = "1.10.0"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["native-tls-vendored"] }
serde_json = "1.0.79"
unm_engine = { version = "0.1.0", path = "../unm_engine" }
unm_request = { version = "0.1.0", path = "../unm_request" }
unm_selector = { version = "0.1.0", path = "../unm_selector" }
unm_types = { version = "0.1.0", path = "../unm_types" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
unm_test_utils = { path = "../unm_test_utils" }
