[package]
name = "unm_engine_migu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
http = "0.2.6"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = "0.11.10"
urlencoding = "2.1.0"
futures = "0.3.21"
rand = "0.8.5"
url = "2.2.2"
unm_engine = { version = "0.1.0", path = "../unm_engine" }
unm_request = { version = "0.1.0", path = "../unm_request" }
unm_selector = { version = "0.1.0", path = "../unm_selector" }
unm_types = { version = "0.1.0", path = "../unm_types" }
log = "0.4.16"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
unm_test_utils = { path = "../unm_test_utils" }
