[package]
name = "unm_engine_pyncm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
http = "0.2.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
unm_engine = { version = "0.1.0", path = "../unm_engine" }
unm_request = { version = "0.1.0", path = "../unm_request" }
unm_types = { version = "0.1.0", path = "../unm_types" }
url = "2.2.2"
log = "0.4.16"
