[package]
name = "unm_providers"
description = "The providers of UNM."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

unm_proxy_server = { path = "../unm_proxy_server" }
unm_request = { path = "../unm_request" }

serde_json = "1"
async-trait = "0.1"

urlencoding = "*"

tokio = "1"
