[package]
name = "unm_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
http = "0.2.6"
once_cell = "1.9.0"
reqwest = { version = "0.11.8", features = ["json", "brotli", "deflate", "gzip"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"
urlencoding = "2.1.0"

[features]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "engine_keyword"
harness = false
