[package]
name = "unm_resolver"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
futures = { version = "0.3.19" }
http = "0.2.6"
log = "0.4.14"
once_cell = "1.9.0"
openssl = { version = "0.10.38", features = ["vendored"] }
rayon = "1.5.1"
reqwest = { version = "0.11.9", features = [
    "json",
    "brotli",
    "deflate",
    "gzip",
] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"
urlencoding = "2.1.0"
rand = "0.8.4"

[features]

[dev-dependencies]
criterion = "0.3.5"
simple_logger = "2.1.0"

[[bench]]
name = "engine_keyword"
harness = false
