[package]
name = "unm_resolver"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
futures = "0.3.21"
http = "0.2.6"
log = "0.4.14"
once_cell = "1.10.0"
openssl = { version = "0.10.38", features = ["vendored"] }
rayon = "1.5.1"
reqwest = { version = "0.11.10", features = [
    "json",
    "brotli",
    "deflate",
    "gzip",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
urlencoding = "2.1.0"
rand = "0.8.5"
bimap = "0.6.2"
unm_types = { version = "0.1.0", path = "../unm_types" }

[features]

[dev-dependencies]
criterion = "0.3.5"
unm_test_utils = { path = "../unm_test_utils" }

[[bench]]
name = "engine_keyword"
harness = false
