[package]
edition = "2021"
name = "unm_resolver_napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-recursion = "1.0.0"
napi = { version = "2.1.0", features = ["full"] }
napi-derive = "2.2.0"
unm_resolver = { path = "../unm_resolver" }

[build-dependencies]
napi-build = "1.2.1"
