[package]
edition = "2021"
name = "unm_resolver_napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-recursion = "1.0.0"
napi = { version = "2.2.0", features = ["full"] }
napi-derive = "2.2.0"
unm_engine = { version = "0.1.0", path = "../unm_engine" }
unm_engine_bilibili = { version = "0.1.0", path = "../unm_engine_bilibili" }
unm_engine_kugou = { version = "0.1.0", path = "../unm_engine_kugou" }
unm_engine_migu = { version = "0.1.0", path = "../unm_engine_migu" }
unm_engine_pyncm = { version = "0.1.0", path = "../unm_engine_pyncm" }
unm_engine_ytdl = { version = "0.1.0", path = "../unm_engine_ytdl" }
unm_types = { version = "0.1.0", path = "../unm_types" }
concat-idents = "1.1.3"
simple_logger = "2.1.0"

[build-dependencies]
napi-build = "1.2.1"

[features]
