[package]
name = "unm_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unm_types = { version = "0.1.0", path = "../unm_types" }

[dev-dependencies]
once_cell = "1.10.0"
serde = "1.0.136"
serde_json = "1.0.79"
