[package]
name = "unm_engine_bilibili"
description = "The Bilibili engine for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.3.0-pre.1"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
http = "0.2.6"
unm_engine = { version = "0.3.0-pre.0", path = "../../engine-base" }
unm_request = { version = "0.3.0-pre.0", path = "../../request" }
unm_selector = { version = "0.3.0-pre.0", path = "../../selector" }
unm_types = { version = "0.3.0-pre.0", path = "../../types" }
url = "2.2.2"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
unm_test_utils = { path = "../../test-utils" }
