[package]
name = "unm_engine_joox"
description = "The Joox engine for UnblockNeteaseMusic."
license = "LGPL-3.0-or-later"
version = "0.3.0"
repository = "https://github.com/UnblockNeteaseMusic/server-rust"
readme = "../../README.md"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
base64 = "0.13.0"
http = "0.2.8"
log = "0.4.17"
once_cell = "1.15.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["native-tls-vendored"] }
serde_json = "1.0.85"
unm_engine = { version = "0.3.0", path = "../../engine-base" }
unm_request = { version = "0.3.0", path = "../../request" }
unm_selector = { version = "0.3.0", path = "../../selector" }
unm_types = { version = "0.3.0", path = "../../types" }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
unm_test_utils = { path = "../../test-utils" }
